update logo svg size and place correctly in anchor; fix header formatting and spacing for hero cube

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -4,16 +4,21 @@
 .container--hero {
     width: 100%;
     height: 40vh;
-    min-height: 350px;
+    min-height: 450px;
     background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
     perspective: 1200px;
     z-index: 30;
-    margin-top: 5rem;
+    margin-top: 3rem;
     overflow: hidden;
-    padding-top: 1.5rem;
+}
+
+@media screen and (min-width: $medium) {
+    .container--hero {
+        margin-top: 7rem;
+    }
 }
 
 #hero-cube {
@@ -21,7 +26,6 @@
     width: 250px;
     height: 250px;
     transform-style: preserve-3d;
-    margin-top: 5%;
     z-index: 10;
 
     &:hover {
