--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,7 +18,7 @@ h1 {
     margin-bottom: 3rem;
     text-align: center;
     background-color: #222222ee;
-    z-index: 30;
+    // z-index: 30;
 }
 
 .container--byline {
@@ -81,6 +81,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .container--about-text {
